// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-6 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
</div>
`;

exports[`composition hook should return with FieldWrapper props 1`] = `
Object {
  "children": <React.Fragment>
    <Input
      id="id-test"
    />
  </React.Fragment>,
  "className": "css-1fie8gx css-63it0p css-jwhr8m bb-Box bb-FieldWrapper",
}
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-8 {
  color: var(--bb-palette-primary,#000000) !important;
}

<div
  class="emotion-6 emotion-1 emotion-8 test bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-6 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
</div>
`;

exports[`props should render correctly for a danger state 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0 {
  border-color: var(--bb-palette-danger,#000000);
  box-shadow: var(--bb-palette-dangerTint,#000000) 0px 0px 0px 3px !important;
}

<div
  class="emotion-6 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="true"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
</div>
`;

exports[`props should render correctly for a success state 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0 {
  border-color: var(--bb-palette-success,#000000);
  box-shadow: var(--bb-palette-successTint,#000000) 0px 0px 0px 3px !important;
}

<div
  class="emotion-6 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
</div>
`;

exports[`props should render correctly for a warning state 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0 {
  border-color: var(--bb-palette-warning,#000000);
  box-shadow: var(--bb-palette-warningTint,#000000) 0px 0px 0px 3px !important;
}

<div
  class="emotion-6 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
</div>
`;

exports[`props should render correctly when isOptional is truthy 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-6 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
</div>
`;

exports[`props should render correctly when isRequired is truthy 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-6 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      aria-required="true"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-8 {
  color: var(--bb-palette-primary,#000000) !important;
}

<div
  class="emotion-6 emotion-1 emotion-8 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
</div>
`;

exports[`props should render correctly with a description 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-6 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
</div>
`;

exports[`props should render correctly with a hint 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  display: block;
  font-size: 0.875rem;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-10 {
  margin-top: 0.25rem !important;
}

<div
  class="emotion-11 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
  <div
    class="emotion-1 emotion-10 bb-Box"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-FieldWrapperHintText bb-Box"
    >
      This is a hint
    </div>
  </div>
</div>
`;

exports[`props should render correctly with a label 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3.emotion-3.emotion-3 {
  margin-bottom: 0px;
}

.emotion-13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-8 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-8::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-8::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-8:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-8::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-7 {
  margin-bottom: 0.75rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

<div
  class="emotion-14 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-7 bb-Box"
  >
    <div
      class="emotion-1 emotion-5 bb-Box"
    >
      <label
        class="emotion-0 emotion-1 emotion-2 emotion-3 bb-FieldWrapperLabel bb-Box bb-Label"
        for="id-test"
      >
        This is a label
      </label>
    </div>
  </div>
  <div
    class="emotion-1 emotion-2 emotion-13 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      class="emotion-8 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
</div>
`;

exports[`props should render correctly with a tooltip 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-6 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
</div>
`;

exports[`props should render correctly with a tooltip trigger component 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-6 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
</div>
`;

exports[`props should render correctly with validation text 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  display: block;
  font-size: 0.875rem;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-9 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
  <div
    class="emotion-1 emotion-2 emotion-8 bb-FieldWrapperValidationText bb-Box"
  >
    This is a validation text
  </div>
</div>
`;

exports[`theming FieldWrapper.DescriptionText.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-6 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
</div>
`;

exports[`theming FieldWrapper.HintText.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-10 {
  margin-top: 0.25rem !important;
}

.emotion-8 {
  display: block;
  font-size: 0.875rem;
}

.emotion-8 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-11 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
  <div
    class="emotion-1 emotion-10 bb-Box"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-FieldWrapperHintText bb-Box"
    >
      This is a hint
    </div>
  </div>
</div>
`;

exports[`theming FieldWrapper.Label.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-8 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-8::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-8::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-8:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-8::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-7 {
  margin-bottom: 0.75rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-3.emotion-3.emotion-3 {
  margin-bottom: 0px;
}

.emotion-3 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-14 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-7 bb-Box"
  >
    <div
      class="emotion-1 emotion-5 bb-Box"
    >
      <label
        class="emotion-0 emotion-1 emotion-2 emotion-3 bb-FieldWrapperLabel bb-Box bb-Label"
        for="id-test"
      >
        This is a label
      </label>
    </div>
  </div>
  <div
    class="emotion-1 emotion-2 emotion-13 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      class="emotion-8 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
</div>
`;

exports[`theming FieldWrapper.OptionalText.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-6 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
</div>
`;

exports[`theming FieldWrapper.RequiredText.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-6 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      aria-required="true"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
</div>
`;

exports[`theming FieldWrapper.TooltipPopover.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-6 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
</div>
`;

exports[`theming FieldWrapper.TooltipTrigger.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-6 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
</div>
`;

exports[`theming FieldWrapper.ValidationText.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-8 {
  display: block;
  font-size: 0.875rem;
}

.emotion-8 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-9 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
  <div
    class="emotion-1 emotion-2 emotion-8 bb-FieldWrapperValidationText bb-Box"
  >
    This is validation text
  </div>
</div>
`;

exports[`theming FieldWrapper.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-6 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-6 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
>
  <div
    class="emotion-1 emotion-2 emotion-5 bb-InputWrapper bb-Box"
  >
    <input
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      id="id-test"
      type="text"
    />
  </div>
</div>
`;
